--- a/sections/product-bundle.liquid
+++ b/sections/product-bundle.liquid
@@ -30,7 +30,7 @@
         <ol role="list" class="mx-auto px-4 flex items-center space-x-2 sm:px-6 max-w-7xl lg:px-8">
           <li>
             <div class="flex items-center">
-              <a href="/" class="mr-2 text-xs lg:text-base font-medium text-gray-900">Home</a>
+              <a href="/" class="mr-2 text-xs font-medium text-gray-900">Home</a>
               <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-5 text-gray-300">
                 <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
               </svg>
@@ -40,7 +40,7 @@
           {% if product.collections[0].url != blank %}
           <li class="hidden md:block">
             <div class="flex items-center">
-              <a href="{{product.collections[0].url}}" class="mr-2 text-xs lg:text-base font-medium text-gray-900">{{product.collections[0].title}}</a>
+              <a href="{{product.collections[0].url}}" class="mr-2 text-xs font-medium text-gray-900">{{product.collections[0].title}}</a>
               <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-5 text-gray-300">
                 <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
               </svg>
@@ -49,7 +49,7 @@
           {% endif %}
   
           <li class="text-sm">
-            <a href="{{product.url}}" aria-current="page" class="text-xs lg:text-base font-medium text-gray-500 hover:text-gray-600">{{ product.title }}</a>
+            <a href="{{product.url}}" aria-current="page" class="text-xs font-medium text-primaryRed hover:text-gray-600">{{ product.title }}</a>
           </li>
         </ol>
       </nav>
@@ -62,20 +62,21 @@
         <div class="flex-1 w-full">
         {% render 'product-gallery' %}
       </div>
-        <div class="mt-10 px-4 sm:px-0 sm:mt-16 lg:mt-0 w-full lg:max-w-[30%] lg:ml-[32px] break-words">
+        <div class="mt-10 px-4 sm:px-0 sm:mt-8 lg:mt-0 w-full lg:max-w-[30%] lg:ml-[32px] break-words text-sm">
           {{product.description}}
         </div>
       </div>
   
       <!-- Product info -->
-      <div class="max-w-2xl mx-auto pt-10 px-4 sm:px-6 md:max-w-7xl md:pt-8 md:px-8 md:grid md:grid-cols-3 md:grid-rows-[auto,auto,1fr] md:gap-x-8">
-        <div class="md:col-span-2 lg:border-r lg:border-gray-200 md:pr-8">
+        <div class="px-4 sm:px-6 max-w-7xl md:pt-8 md:px-8 mx-auto">
           <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Build Your Kit</h1>
           <p>The essential items for your swap have been pre-selected. If you wish to add, change or remove any of the items in the available options feel free to do so below.</p>
         </div>
   
         <!-- Options -->
-        <div class="mt-4 md:mt-0 md:row-span-3">
+      <product-bundle class="mx-auto pt-10 px-4 sm:px-6 max-w-7xl md:pt-8 md:px-8 md:grid md:grid-cols-3 md:grid-rows-[auto,auto,1fr] md:gap-x-8">
+
+        <div class="py-4 mt-4 md:mt-0 md:row-span-3 col-start-3">
 
           <!-- Reviews -->
       
@@ -92,21 +93,21 @@
               
             </div>
           </div>
-          <button id="add-to-bundle" class="mb-8 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add Kit To Cart</button>
+          <button id="add-to-bundle" class="mb-8 w-full bg-primaryRed border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add Kit To Cart</button>
     
         </div>
   
-        <div class="py-4 md:py-4 md:pb-16 md:col-start-1 md:col-span-2 md:border-r md:border-gray-200 md:pr-8">
+        <div class="py-4 md:pb-16 md:col-start-1 md:col-span-2 md:border-r md:border-gray-200">
           <!-- Description and details -->
   
           <!-- Options -->
-          <div class="mt-4 lg:mt-0 lg:row-span-3">
+          <div class="mt-0 lg:row-span-3">
   
             <h2 class="sr-only">Product information</h2>
     
             <!-- Reviews -->
         
-            <product-bundle>
+
        
               <div>
              
@@ -122,7 +123,7 @@
                   <div class="col-span-2 md:col-span-4">
                     <span class="flex items-center justify-between">
                         <h3 class="text-lg font-extrabold tracking-tight text-gray-900 pb-0">{{ block.settings.featured_heading }}</h3>
-                        <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Size guide</a>
+                        <!-- <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Size guide</a> -->
                     </span>
                     <hr class="w-full h-[2px] bg-gray-300 my-1"/>
                   </div>
@@ -161,27 +162,16 @@
                 {% endif %}
 
                 {% endfor %}
-
-
-
-            
-
-                
+              
                   </div>
                 </fieldset>
               </div>
     
-            </product-bundle>
 
-
-
-
-
-
- 
         </div>
   
-      </div>
+        </div>
+      </product-bundle>
  
     </main>
  
