--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -22,44 +22,48 @@
     {% endif %}
 {% endfor %}
 
-<div class="bg-gray-50">
+<div class="bg-gray-50 pt-16">
  
-  <div class="max-w-2xl mx-auto py-4 px-4 sm:py-6 sm:px-6 lg:max-w-7xl lg:px-8">
+  <div class="max-w-2xl mx-auto pb-4 px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <!-- This example requires Tailwind CSS v2.0+ -->
     <nav aria-label="Breadcrumb">
-      <ol role="list" class="max-w-2xl mx-auto flex items-center space-x-2 lg:max-w-7xl">
+      <ol role="list" class="mx-auto flex items-center space-x-2 max-w-7xl">
         <li>
           <div class="flex items-center">
-            <a href="/" class="mr-2 text-sm font-medium text-gray-900">Home</a>
+            <a href="/" class="mr-2 text-xs font-medium text-gray-900">Home</a>
             <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-5 text-gray-300">
               <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
             </svg>
           </div>
         </li>
-  
+
         {% if product.collections[0].url != blank %}
-        <li>
+        <li class="hidden md:block">
           <div class="flex items-center">
-            <a href="{{product.collections[0].url}}" class="mr-2 text-sm font-medium text-gray-900">{{product.collections[0].title}}</a>
+            <a href="{{product.collections[0].url}}" class="mr-2 text-xs font-medium text-gray-900">{{product.collections[0].title}}</a>
             <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-5 text-gray-300">
               <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
             </svg>
           </div>
         </li>
         {% endif %}
-  
+
         <li class="text-sm">
-          <a href="{{product.url}}" aria-current="page" class="font-medium text-gray-500 hover:text-gray-600">{{ product.title }}</a>
+          <a href="{{product.url}}" aria-current="page" class="text-xs font-medium text-primaryRed hover:text-gray-600">{{ product.title }}</a>
         </li>
       </ol>
     </nav>
 
-    <div class="lg:grid lg:grid-cols-2 lg:gap-x-8 lg:items-start">
+    <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl mx-auto flex items-center space-x-2 max-w-7xl pb-0">{{ product.title }}</h1>
+
+
+
+    <div class="lg:grid lg:grid-cols-2 lg:gap-x-8 lg:items-start mt-6">
       <!-- Image gallery -->
       {% render 'product-gallery' %}
 
       <!-- Product info -->
-      <div class="mt-10 px-4 sm:px-0 sm:mt-16 lg:mt-0">
+      <div class="mt-10 ml-[32px] px-4 sm:px-0 sm:mt-16 lg:mt-0">
 
   
         <div id="ProductInfo-{{ section.id }}" class="product__info-container">
