--- a/sections/section-register.liquid
+++ b/sections/section-register.liquid
@@ -31,7 +31,7 @@
           <h2 class="mt-6 text-3xl font-extrabold text-white">Create Account</h2>
           <p class="mt-2 text-sm text-white">
             Or
-            <a href="/account/login" class="font-medium text-white hover:text-lightPrimaryBlue"> Sign In </a>
+            <a href="/account/login" class="font-medium text-white hover:text-primaryRed"> Sign In </a>
           </p>
         </div>
   
