--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -44,7 +44,7 @@
     {%- endcomment -%}
     <div class="price__regular">
       <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.regular_price' | t }}</span>
-      <span class="price-item price-item--regular text-3xl text-gray-900">
+      <span class="price-item price-item--regular text-xl text-gray-900 font-extrabold">
         {{ money_price }}
       </span>
     </div>
