--- a/snippets/product-gallery.liquid
+++ b/snippets/product-gallery.liquid
@@ -1,6 +1,6 @@
 <div class="flex">
     <!-- Image selector -->
-    <thumbnail-slider class="relative mr-[32px] hidden mt-6 w-max max-w-[80px] mx-auto sm:block overflow-hidden h-full max-h-[450px]">
+    <thumbnail-slider class="relative sm:mr-[16px] lg:mr-[32px] hidden w-max max-w-[80px] mx-auto sm:block overflow-hidden h-full max-h-[450px]">
       <div class="swiper-wrapper" aria-orientation="horizontal" role="tablist">
         {% for image in product.images %}
            
