--- a/sections/cart-notification-product.liquid
+++ b/sections/cart-notification-product.liquid
@@ -11,7 +11,7 @@
         >
       {% endif %}
       <div>
-        <h3 class="cart-notification-product__name font-medium text-gray-900 text-base pb-0 mb-0">{{ item.product.title | escape }}</h3>
+        <h3 class="cart-notification-product__name font-bold text-gray-900 text-base pb-0 mb-0">{{ item.product.title | escape }}</h3>
           <dl>
             {%- unless item.product.has_only_default_variant -%}
               {%- for option in item.options_with_values -%}
