--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -66,7 +66,7 @@
               <span class="h2">{{ shop.name }}</span>
             {%- endif -%}
           </a>
-          <button type="button" class="-m-2 p-2 rounded-md inline-flex items-center justify-center text-lightPrimaryBlue">
+          <button type="button" class="-m-2 p-2 rounded-md inline-flex items-center justify-center text-primaryRed">
             <span class="sr-only">Close menu</span>
             <!-- Heroicon name: outline/x -->
             <svg id="mobile-menu-button-close" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
@@ -175,7 +175,7 @@
                     <div class="flex">
                       <div class="relative flex item-1">
                         <!-- Item active: "border-indigo-600 text-indigo-600", Item inactive: "border-transparent text-gray-700 hover:text-gray-800" -->
-                        <button id="meganav-heading" type="button" class="border-transparent uppercase font-bold text-black hover:text-lightPrimaryBlue relative z-10 flex items-center transition-colors ease-out duration-200 text-sm border-b-2 -mb-px pt-px" aria-expanded="false" meganav_heading_index="{{forloop.index}}">{{ link.title }}{% render 'icon-caret' %}</button>
+                        <button id="meganav-heading" type="button" class="border-transparent uppercase font-bold text-black hover:text-primaryRed relative z-10 flex items-center transition-colors ease-out duration-200 text-sm border-b-2 -mb-px pt-px" aria-expanded="false" meganav_heading_index="{{forloop.index}}">{{ link.title }}{% render 'icon-caret' %}</button>
                       </div>
 
                       <!--
@@ -203,7 +203,7 @@
                                   <ul role="list" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
                                     {% for grandchildlink in childlink.links %}
                                     <li class="flex">
-                                      <a href="{{ grandchildlink.url }}" class="font-bold hover:text-lightPrimaryBlue">{{ grandchildlink.title }}</a>
+                                      <a href="{{ grandchildlink.url }}" class="font-bold hover:text-primaryRed">{{ grandchildlink.title }}</a>
                                     </li>
                                     {% endfor %}
                                   </ul>
@@ -220,7 +220,7 @@
                     </div>
 
                     {% else %}
-                      <a href="{{ link.url }}" class="flex items-center uppercase text-sm font-bold text-black hover:text-lightPrimaryBlue">{{ link.title }}</a>
+                      <a href="{{ link.url }}" class="flex items-center uppercase text-sm font-bold text-black hover:text-primaryRed">{{ link.title }}</a>
                     {% endif %}
                     {% endfor %}
                   </div>
@@ -230,7 +230,7 @@
               <!-- Mobile menu and search (lg-) -->
               <div class="flex-1 flex items-center lg:hidden">
                 <!-- Mobile menu toggle, controls the 'mobileMenuOpen' state. -->
-                <button id="mobile-menu-button" type="button" class="-ml-2 bg-white p-2 rounded-md text-lightPrimaryBlue">
+                <button id="mobile-menu-button" type="button" class="-ml-2 bg-white p-2 rounded-md text-primaryRed">
                   <span class="sr-only">Open menu</span>
                   <!-- Heroicon name: outline/menu -->
                   <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
@@ -266,7 +266,7 @@
                
 
                     <div class="flex">
-                      <a href="/account" class="-m-2 p-2 text-lightPrimaryBlue hover:text-black">
+                      <a href="/account" class="-m-2 p-2 text-primaryRed hover:text-black">
                         <span class="sr-only">Account</span>
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
@@ -280,10 +280,11 @@
                   <div class="flow-root">
                     <a href="/cart" class="group -m-2 p-2 flex items-center" id="cart-icon-bubble">
                       <!-- Heroicon name: outline/shopping-cart -->
-                      <svg class="flex-shrink-0 h-6 w-6 text-lightPrimaryBlue group-hover:text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
+                      <svg class="flex-shrink-0 h-6 w-6 text-primaryRed group-hover:text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                       </svg>
-                      <span class="ml-2 text-sm font-medium text-lightPrimaryBlue group-hover:text-black">{{ cart.item_count }}</span>
+                      
+                      <span class="ml-2 text-sm font-medium text-primaryRed group-hover:text-black">{{ cart.item_count }}</span>
                       <span class="sr-only">items in cart, view bag</span>
                     </a>
                   </div>
