--- a/sections/section-login.liquid
+++ b/sections/section-login.liquid
@@ -31,7 +31,7 @@
           <h2 class="mt-6 text-3xl font-extrabold text-white">Sign in to your account</h2>
           <p class="mt-2 text-sm text-white">
             Or
-            <a href="{{ routes.account_register_url }}" class="font-medium text-white hover:text-lightPrimaryBlue"> Create Account </a>
+            <a href="{{ routes.account_register_url }}" class="font-medium text-white hover:text-primaryRed"> Create Account </a>
           </p>
         </div>
   
@@ -102,7 +102,7 @@
             </div>
   
             <div class="text-sm">
-              <a id="forgot-password" href="#recover" class="font-medium text-white hover:text-lightPrimaryBlue"> Forgot your password? </a>
+              <a id="forgot-password" href="#recover" class="font-medium text-white hover:text-primaryRed"> Forgot your password? </a>
             </div>
           </div>
   
@@ -191,7 +191,7 @@
               {%- endif -%}
         
               <div>
-                <label for="RecoverEmail" class="block text-sm font-medium text-lightPrimaryBlue">
+                <label for="RecoverEmail" class="block text-sm font-medium text-primaryRed">
                   {{ 'customer.login_page.email' | t }}
                 </label>
                 <input type="email"
