--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -24,7 +24,7 @@
 
       <div class="grid grid-cols-1 lg:grid-cols-3">
         <!-- Contact information -->
-        <div class="relative overflow-hidden py-10 px-6 bg-lightPrimaryBlue sm:px-10 xl:p-12">
+        <div class="relative overflow-hidden py-10 px-6 bg-primaryRed sm:px-10 xl:p-12">
     
           <h3 class="text-lg font-medium text-white">Contact information</h3>
           <p class="mt-6 text-base text-indigo-50 max-w-3xl">{{section.settings.text}}</p>
