--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -398,7 +398,7 @@
                           <div class="flex-1 flex flex-col justify-end">
                             <p class="text-base font-medium text-gray-900">{{ product.price | money }}</p>
                           </div>
-                          <button type="button" class="text-center items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-lightPrimaryBlue hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Learn More</button>
+                          <button type="button" class="text-center items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-primaryRed hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add to Cart</button>
 
                         </div>
                       </div>
