--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -27,7 +27,7 @@
                   </dl>
                 
                   <div class="cart__ctas mt-6" {{ block.shopify_attributes }}>
-                    <a href="/checkout" id="checkout" class="cart__checkout-button w-full block relative text-center bg-lightPrimaryBlue border border-transparent rounded-md shadow-sm py-3 px-4 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-indigo-500">Place Order Request</a>
+                    <a href="/checkout" id="checkout" class="cart__checkout-button w-full block relative text-center bg-primaryRed border border-transparent rounded-md shadow-sm py-3 px-4 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-indigo-500">Place Order Request</a>
                   </div>
                   <div id="cart-errors"></div>
               </div>
