--- a/sections/activate-account.liquid
+++ b/sections/activate-account.liquid
@@ -81,7 +81,7 @@
     
      
     <div>
-      <button class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-lightPrimaryBlue hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+      <button class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-primaryRed hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
         {{ 'customer.activate_account.submit' | t }}
       </button>
     </div>
