--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -51,7 +51,7 @@
       </p>
       <div class="mt-8">
         <div class="inline-flex rounded-md shadow">
-          <a href="{{section.settings.button_link}}" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-lightPrimaryBlue hover:bg-gray-900">
+          <a href="{{section.settings.button_link}}" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-primaryRed hover:bg-gray-900">
             {{section.settings.button_label}}
             <!-- Heroicon name: solid/external-link -->
             <svg class="-mr-1 ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
