--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -47,7 +47,7 @@
         <div aria-hidden="true" class="bg-gradient-to-b from-transparent to-black opacity-50"></div>
 
         <div class="relative w-full flex flex-col items-center justify-end bg-black bg-opacity-50 p-4 sm:p-6 h-[270px] md:h-125 lg:h-[650px]">
-          <h2 class="text-lg font-medium text-gray-400 pb-0">{{block.settings.sub_title}}</h2>
+          <h2 class="text-lg font-medium text-white pb-0">{{block.settings.sub_title}}</h2>
           <p class="mt-1 text-2xl font-extrabold text-white">{{block.settings.title}}</p>
           <a href="{{block.settings.url}}" class="mt-6 text-sm font-bold text-white bg-primaryRed py-2.5 px-4 rounded-md">
             <span class="absolute inset-0"></span>
@@ -82,7 +82,7 @@
   <div class="max-w-full mx-auto">
     <!-- <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider">Looking for other products? We create exhaust systems for numerous cars.</p> -->
 
-    <div class="bg-gradient-to-r from-primaryRed via-black to-gray-900 bg-opacity-90 relative pb-10 pt-10 px-4 mb-0">
+    <div class="bg-gradient-to-r from-primaryRed via-primaryRed to-gray-900 bg-opacity-90 relative pb-10 pt-10 px-4 mb-0">
       <h2 class="text-center text-3xl leading-8 font-extrabold tracking-tight text-white sm:text-4xl" style="text-shadow: 1px 2px black;">{{section.settings.title}}</h2>
       <p class="mt-4 max-w-3xl mx-auto text-center text-base text-white">
         {{ section.settings.sub_title }}
@@ -91,7 +91,7 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-2 lg:grid-cols-3">
       {% for block in section.blocks %}
-        <div class="col-span-1 flex justify-around items-center py-16 px-4 bg-white">
+        <div class="col-span-1 flex justify-around items-center py-16 px-4 bg-gray-900">
           <a href="{{block.settings.url}}">
 
        
@@ -114,9 +114,9 @@
           height="{{ block.settings.image.width | divided_by: block.settings.image.aspect_ratio }}"
         >
         <div>
-          <h3 class="font-bold text-xl pb-0">{{block.settings.title}}</h3>
-          <p class="text-xs pt-1 pb-3">{{block.settings.sub_title}}</p>
-          <a href="{{block.settings.url}}" class="inline-block bg-primaryRed border border-transparent py-1.5 px-4 text-sm font-medium text-white hover:bg-gray-900">SHOP NOW</a>
+          <h3 class="font-bold text-xl pb-0 text-white">{{block.settings.title}}</h3>
+          <p class="text-xs pt-1 pb-3 text-gray-400">{{block.settings.sub_title}}</p>
+          <a href="{{block.settings.url}}" class="inline-block bg-primaryRed border border-transparent py-1.5 px-4 text-sm font-medium text-white hover:bg-gray-700">SHOP NOW</a>
         </div>
       
       </a>
