--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -89,10 +89,10 @@
       </p>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-2 lg:grid-cols-3">
+    <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 gap-2 lg:grid-cols-6">
       {% for block in section.blocks %}
-        <div class="col-span-1 flex justify-around items-center py-16 px-4 bg-gray-900">
-          <a href="{{block.settings.url}}">
+        <div class="col-span-1 py-4 px-4 bg-gray-900 bg-opacity-50 hover:bg-opacity-60 transition duration-500">
+          <a class="flex flex-col justify-around items-center h-full" href="{{block.settings.url}}">
 
        
           <img
@@ -112,11 +112,11 @@
           alt="{{ block.settings.image.alt | escape }}"
           width="{{ block.settings.image.width }}"
           height="{{ block.settings.image.width | divided_by: block.settings.image.aspect_ratio }}"
-        >
-        <div>
+        />
+        <div class="flex flex-col items-center mt-auto">
           <h3 class="font-bold text-xl pb-0 text-white">{{block.settings.title}}</h3>
-          <p class="text-xs pt-1 pb-3 text-gray-400">{{block.settings.sub_title}}</p>
-          <a href="{{block.settings.url}}" class="inline-block bg-primaryRed border border-transparent py-1.5 px-4 text-sm font-medium text-white hover:bg-gray-700">SHOP NOW</a>
+          <p class="text-xs pt-1 pb-3 text-gray-300">{{block.settings.sub_title}}</p>
+          <span class="inline-block bg-primaryRed border border-transparent py-1.5 px-4 text-sm font-medium text-white hover:bg-gray-900 transition duration-500">SHOP NOW</span>
         </div>
       
       </a>
