--- a/sections/product-bundle.liquid
+++ b/sections/product-bundle.liquid
@@ -68,7 +68,7 @@
       </div>
   
       <!-- Product info -->
-        <div class="px-4 sm:px-6 max-w-7xl md:pt-8 md:px-8 mx-auto">
+        <div class="px-4 sm:px-6 max-w-7xl pt-8 md:px-8 mx-auto">
           <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl">Build Your Kit</h1>
           <p>The essential items for your swap have been pre-selected. If you wish to add, change or remove any of the items in the available options feel free to do so below.</p>
         </div>
@@ -80,21 +80,21 @@
 
           <!-- Reviews -->
       
-          <div class="bg-gray-100 p-3 mb-4">
+          <div class="bg-gray-900 p-3 mb-4 rounded-md">
             <h3 class="sr-only">Description</h3>
-            <h1 class="text-xl font-extrabold tracking-tight text-gray-900 sm:text-xl">Kit Contents</h1>
+            <h1 class="text-xl font-extrabold tracking-tight text-white sm:text-xl">Selected Kit Content</h1>
 
               <h2 class="sr-only">Product information</h2>
   
             <div class="space-y-6">
               <span id="foo"></span>
-              <p id="bundle-total" class="text-base font-medium pt-2 text-black">Total: $0</p>
+              <p id="bundle-total" class="text-base font-medium py-2 text-white">Total: $0</p>
 
               
             </div>
-          </div>
-          <button id="add-to-bundle" class="mb-8 w-full bg-primaryRed border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add Kit To Cart</button>
-    
+          <button id="add-to-bundle" class="w-full bg-primaryRed border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add Kit To Cart</button>
+        </div>
+
         </div>
   
         <div class="py-4 md:pb-16 md:col-start-1 md:col-span-2 md:border-r md:border-gray-200">
