--- a/sections/main-our-mission.liquid
+++ b/sections/main-our-mission.liquid
@@ -7,14 +7,16 @@
         <div class="absolute inset-0 bg-gray-800 mix-blend-multiply" aria-hidden="true"></div>
       </div>
       <div class="relative max-w-7xl mx-auto px-4 py-16 sm:px-6 lg:px-8">
-        <h1 class="text-4xl font-extrabold tracking-tight text-white">See Our Builds and Our Parts in Action</h1>
-        <p class="mt-6 max-w-3xl text-xl text-gray-300">Varius facilisi mauris sed sit. Non sed et duis dui leo, vulputate id malesuada non. Cras aliquet purus dui laoreet diam sed lacus, fames. Dui, amet, nec sit pulvinar.</p>
+        <h1 class="text-4xl font-extrabold tracking-tight text-white">{{section.settings.title}}</h1>
+        <p class="mt-6 max-w-3xl text-xl text-gray-300">{{ section.settings.sub_title }}</p>
       </div>
     </div>
   
     <!-- Overlapping cards -->
     <section class="-mt-32 max-w-7xl mx-auto relative z-10 pb-32 px-4 sm:px-6 lg:px-8" aria-labelledby="contact-heading">
       <h2 class="sr-only" id="contact-heading">Contact us</h2>
+
+      {% for block in section.blocks %}
       <div class="grid grid-cols-1 gap-y-20 lg:grid-cols-3 lg:gap-y-0 lg:gap-x-2">
         <div class="flex flex-col bg-primaryRed" style="transform: skewX(-12deg);">
           
@@ -25,45 +27,15 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
               </svg>
             </div>
-            <h3 class="text-xl font-medium text-white">Sales</h3>
-            <p class="mt-4 text-base text-gray-100">Varius facilisi mauris sed sit. Non sed et duis dui leo, vulputate id malesuada non. Cras aliquet purus dui laoreet diam sed lacus, fames.</p>
+            <h3 class="text-xl font-medium text-white">{{block.settings.title}}</h3>
+            <p class="mt-4 text-base text-gray-100">{{block.settings.sub_title}}</p>
           </div>
           <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
             <a href="#" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Contact us<span aria-hidden="true"> &rarr;</span></a>
           </div>
         </div>
-  
-        <div class="flex flex-col bg-primaryRed" style="transform: skewX(-12deg);">
-          <div class="flex-1 relative pt-16 px-6 pb-8 md:px-8" style="transform: skewX(12deg);">
-            <div class="absolute top-0 p-5 inline-block bg-indigo-600 rounded-xl shadow-lg transform -translate-y-1/2">
-              <!-- Heroicon name: outline/support -->
-              <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
-              </svg>
-            </div>
-            <h3 class="text-xl font-medium text-white">Technical Support</h3>
-            <p class="mt-4 text-base text-gray-100">Varius facilisi mauris sed sit. Non sed et duis dui leo, vulputate id malesuada non. Cras aliquet purus dui laoreet diam sed lacus, fames.</p>
-          </div>
-          <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
-            <a href="#" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Contact us<span aria-hidden="true"> &rarr;</span></a>
-          </div>
-        </div>
-  
-        <div class="flex flex-col bg-primaryRed" style="transform: skewX(-12deg);">
-          <div class="flex-1 relative pt-16 px-6 pb-8 md:px-8" style="transform: skewX(12deg);">
-            <div class="absolute top-0 p-5 inline-block bg-indigo-600 rounded-xl shadow-lg transform -translate-y-1/2">
-              <!-- Heroicon name: outline/newspaper -->
-              <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3H9M7 16h6M7 8h6v4H7V8z" />
-              </svg>
-            </div>
-            <h3 class="text-xl font-medium text-white">Media Inquiries</h3>
-            <p class="mt-4 text-base text-gray-100">Varius facilisi mauris sed sit. Non sed et duis dui leo, vulputate id malesuada non. Cras aliquet purus dui laoreet diam sed lacus, fames.</p>
-          </div>
-          <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
-            <a href="#" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Contact us<span aria-hidden="true"> &rarr;</span></a>
-          </div>
-        </div>
+        {% endfor %}
+
       </div>
     </section>
   </div>
@@ -78,132 +50,51 @@
         "label": "t:sections.image-with-text.settings.image.label"
       },
       {
-        "type": "select",
-        "id": "height",
-        "options": [
-          {
-            "value": "adapt",
-            "label": "t:sections.image-with-text.settings.height.options__1.label"
-          },
-          {
-            "value": "small",
-            "label": "t:sections.image-with-text.settings.height.options__2.label"
-          },
-          {
-            "value": "large",
-            "label": "t:sections.image-with-text.settings.height.options__3.label"
-          }
-        ],
-        "default": "adapt",
-        "label": "t:sections.image-with-text.settings.height.label"
-      },
-      {
-        "type": "select",
-        "id": "color_scheme",
-        "options": [
-          {
-            "value": "background-1",
-            "label": "t:sections.image-with-text.settings.color_scheme.options__1.label"
-          },
-          {
-            "value": "background-2",
-            "label": "t:sections.image-with-text.settings.color_scheme.options__2.label"
-          },
-          {
-            "value": "inverse",
-            "label": "t:sections.image-with-text.settings.color_scheme.options__3.label"
-          },
-          {
-            "value": "accent-1",
-            "label": "t:sections.image-with-text.settings.color_scheme.options__4.label"
-          },
-          {
-            "value": "accent-2",
-            "label": "t:sections.image-with-text.settings.color_scheme.options__5.label"
-          }
-        ],
-        "default": "background-1",
-        "label": "t:sections.image-with-text.settings.color_scheme.label"
-      },
-      {
-        "type": "select",
-        "id": "layout",
-        "options": [
-          {
-            "value": "image_first",
-            "label": "t:sections.image-with-text.settings.layout.options__1.label"
-          },
-          {
-            "value": "text_first",
-            "label": "t:sections.image-with-text.settings.layout.options__2.label"
-          }
-        ],
-        "default": "image_first",
-        "label": "t:sections.image-with-text.settings.layout.label",
-        "info": "t:sections.image-with-text.settings.layout.info"
-      }
-    ],
-    "blocks": [
-      {
-        "type": "heading",
-        "name": "t:sections.image-with-text.blocks.heading.name",
-        "limit": 1,
-        "settings": [
-          {
-            "type": "text",
-            "id": "heading",
-            "default": "Image with text",
-            "label": "t:sections.image-with-text.blocks.heading.settings.heading.label"
-          }
-        ]
+        "type": "text",
+        "id": "title",
+        "default": "Featured collection",
+        "label": "t:sections.featured-collection.settings.title.label"
       },
       {
         "type": "text",
-        "name": "t:sections.image-with-text.blocks.text.name",
-        "limit": 1,
-        "settings": [
-          {
-            "type": "richtext",
-            "id": "text",
-            "default": "<p>Pair text with an image to focus on your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>",
-            "label": "t:sections.image-with-text.blocks.text.settings.text.label"
-          }
-        ]
-      },
-      {
-        "type": "button",
-        "name": "t:sections.image-with-text.blocks.button.name",
-        "limit": 1,
-        "settings": [
-          {
-            "type": "text",
-            "id": "button_label",
-            "default": "Button label",
-            "label": "t:sections.image-with-text.blocks.button.settings.button_label.label",
-            "info": "t:sections.image-with-text.blocks.button.settings.button_label.info"
-          },
-          {
-            "type": "url",
-            "id": "button_link",
-            "label": "t:sections.image-with-text.blocks.button.settings.button_link.label"
-          }
-        ]
+        "id": "sub_title",
+        "default": "Featured collection Sub Title",
+        "label": "Sub Title"
       }
     ],
+    "blocks": [
+    { 
+      "type": "featured-item",
+      "name": "Featured Item",
+      "settings": [
+      {
+        "type": "text",
+        "id": "title",
+        "default": "Featured Title",
+        "label": "Title"
+      },
+      {
+        "type": "text",
+        "id": "sub_title",
+        "default": "Featured Sub Title",
+        "label": "Title (Only applies to grid layout)"
+      },
+      {
+        "type": "image_picker",
+        "id": "image",
+        "label": "Featured Image"
+      },
+      {
+        "type": "url",
+        "id": "url",
+        "label": "URL"
+      }
+      ]  
+    }
+  ],
     "presets": [
       {
-        "name": "Our Mission",
-        "blocks": [
-          {
-            "type": "heading"
-          },
-          {
-            "type": "text"
-          },
-          {
-            "type": "button"
-          }
-        ]
+        "name": "Our Mission"
       }
     ]
   }
