--- a/sections/main-our-mission.liquid
+++ b/sections/main-our-mission.liquid
@@ -1,8 +1,8 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="bg-white">
     <!-- Header -->
-    <div class="relative pb-32 bg-gray-800">
-      <div class="absolute inset-0">
+    <div class="relative pb-32 bg-gradient-to-r from-primaryRed via-primaryRed to-gray-900">
+      <!-- <div class="absolute inset-0">
         <img
         srcset="{%- if section.settings.background_image.width >= 375 -%}{{ section.settings.background_image | img_url: '375x' }} 375w,{%- endif -%}
           {%- if section.settings.background_image.width >= 750 -%}{{ section.settings.background_image | img_url: '750x' }} 750w,{%- endif -%}
@@ -24,21 +24,20 @@
 
 
         <div class="absolute inset-0 bg-gray-800 mix-blend-multiply" aria-hidden="true"></div>
-      </div>
+      </div> -->
       <div class="relative max-w-7xl mx-auto px-4 py-16 sm:px-6 lg:px-8">
-        <h1 class="text-4xl font-extrabold tracking-tight text-white">{{section.settings.title}}</h1>
-        <p class="mt-6 max-w-3xl text-xl text-gray-300">{{ section.settings.sub_title }}</p>
+        <h1 class="text-4xl font-extrabold tracking-tight text-white"  style="text-shadow: 1px 2px black;">{{section.settings.title}}</h1>
+        <p class="mt-6 max-w-3xl text-xl text-gray-300" style="text-shadow: 1px 2px black;">{{ section.settings.sub_title }}</p>
       </div>
     </div>
   
     <!-- Overlapping cards -->
     <section class="-mt-32 max-w-7xl mx-auto relative z-10 pb-32 px-4 sm:px-6 lg:px-8" aria-labelledby="contact-heading">
-      <h2 class="sr-only" id="contact-heading">Contact us</h2>
 
       <div class="grid grid-cols-1 gap-y-20 lg:grid-cols-3 lg:gap-y-0 lg:gap-x-2">
         {% for block in section.blocks %}
 
-        <a href="{{block.settings.url}}" class="flex flex-col bg-primaryRed shadow-xl rounded-md hover:shadow-2xl transition duration-500">
+        <a href="{{block.settings.url}}" class="flex flex-col bg-gray-900 shadow-xl rounded-md hover:shadow-2xl transition duration-500">
           
           <div class="flex-1 relative pt-16 px-6 pb-8 md:px-8">
             {% if block.settings.logo_image != blank %}
@@ -64,8 +63,8 @@
 
             </div>
             {% endif %}
-            <h3 class="text-xl font-medium text-white">{{block.settings.title}}</h3>
-            <p class="mt-4 text-base text-gray-100">{{block.settings.sub_title}}</p>
+            <h3 class="text-4xl text-center font-extrabold tracking-tight text-primaryRed">{{block.settings.title}}</h3>
+            <p class="mt-4 text-base text-center text-gray-100">{{block.settings.sub_title}}</p>
           </div>
           <div class="p-6 h-[300px] bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8 relative">
             <div class="absolute inset-0">
